--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 <body style="margin-top:-1%">
 
 <div>
-	<div><h1 class="header-w3ls">Patient Entry Form <span class="w3-hide-small">|</span></h1></div>
+	<div><h1 class="header-w3ls">Patient Entry Form </h1></div>
 <!-- Search Form -->
 	<div>
 		<form action = "patientlist" method="get">
